<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TcpBufferData" Id="{48316d36-e12b-4167-8719-68edfd5b7689}">
    <Declaration><![CDATA[TYPE ST_TcpBufferData :
STRUCT
	arrData : ARRAY[1..8192] OF BYTE;
	iLength : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>